# fastapi_pract

./: .env.example  .gitignore  Dockerfile  database.py  docker-compose.yml  models.py  pyproject.toml  pytest.ini  spimex.db
alembic/: env.py
alembic/versions/: 0d05e7ad5a63_init_schema.py
src/: cache.py  config.py  database.py  logger.py  main.py  models.py  spimex_async.py  spimex_sync.py  trading_result_schema.py
src/app/: main.py
tests/: conftest.py  test_cache.py  test_main.py  test_spimex.py
