[tool.poetry]
name = "2-pract"
version = "0.1.0"
description = ""
authors = ["Corner324 <mosenn@mail.ru>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
psycopg2 = "^2.9.10"
sqlalchemy = "^2.0.40"
python-dotenv = "^1.1.0"
pandas = "^2.2.3"
xlrd = "^2.0.1"
openpyxl = "^3.1.5"
psycopg2-binary = "^2.9.10"
requests = "^2.32.3"
beautifulsoup4 = "^4.13.4"
selenium = "^4.32.0"
webdriver-manager = "^4.0.2"
pydantic = "^2.11.4"
asyncpg = "^0.30.0"
aiohttp = "^3.12.2"
fastapi = {extras = ["standard"], version = "^0.115.12"}
aiosqlite = "^0.21.0"
redis = {extras = ["hiredis"], version = "^6.2.0"}

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pytest-asyncio = "^0.23.6"
httpx = "^0.27.0"
respx = "^0.21.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"
